--- a/publicbench/index.html
+++ b/publicbench/index.html
@@ -12,7 +12,7 @@
 <body>
 
 <div style="display: flex; justify-content: space-between;">
-	<h2><a href="../">&#9884;</a> schem.ist - <span data-lang>Javascript Benchmark // Banc d'essais javascript</span></h1>
+	<h2><a href="../">&#9884;</a> <span data-lang>Javascript Benchmark // Banc d'essais javascript</span></h2>
 	<data-lang>en fr</data-lang>
 </div>
 <hr>
