--- a/montecode/index.html
+++ b/montecode/index.html
@@ -25,10 +25,10 @@
 <details>
 	<summary data-lang>templates and examples // exemples de modèles</summary>
 	<li data-lang>
-		<a lang=en href="./#en/Yyndvvm-eDptb9VQCD:/0Rw2UAb3._gP~K$s7*Mk_&QWcb5(~gL++4Zw0B,E97w(0CV6+X~EMv;F-d4KQIf!Bne0&@iABVkg@xrG">
+		<a lang=en href="./#en/1sqfEBX,BWl1Cs2xNv;j0kyVf~+tT?zJ,RFoq@j6OntNx_:MP/NMIpSj9s~2_F$kN&?i1hp2jjHE:/f)rbhwzJ/f+3wk0tm5Z=hrG">
 		variable rate and duration investment
 		</a>
-		<a lang=fr href="./#fr/Yyndvvm-eDptb9VQCD:/0Rw2UAb3._gP~K$s7*Mk_&QWcb5(~gL++4Zw0B,E97w(0CV6+X~EMv;F-d4KQIf!Bne0&@iABVkg@xrG">
+		<a lang=fr href="./#fr/1sqfEBX,BWl1Cs2xNv;j0kyVf~+tT?zJ,RFoq@j6OntNx_:MP/NMIpSj9s~2_F$kN&?i1hp2jjHE:/f)rbhwzJ/f+3wk0tm5Z=hrG">
 		investissement à durée et rendement variable
 	</a></li>
 </details>
