--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
 <hr>
 <blockquote data-lang>misc. experiments and code // petits projets divers</blockquote>
 <ul>
+	<li><time>2022-01-09</time>
+		<span data-lang>
+			<span lang=en><a href="./regexp/index.html#en">word list</a> with regexp filter</span>
+			<span lang=fr><a href="./regexp/index.html#fr">list de mots</a> avec filtre regexp</span>
+		</span>
+	</li>
 	<li><time>2021-05-16</time>
 		<span data-lang>
 			<span lang=en><a href="./404.html#en">404</a> page</span>
