external svg logo and home link language

--- a/publicbench/index.html
+++ b/publicbench/index.html
@@ -12,9 +12,7 @@
 <body>
 
 <div style="display: flex; justify-content: space-between;">
-	<h2><a href="../"><i><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1792 1792">
-		<path d="M1683 806C1698 735 1671 634 1623 581L1215 128C1167 74 1072 49 1004 71L424 259C355 282 282 355 259 424L71 1004C49 1072 74 1167 128 1215L581 1623C634 1671 735 1698 806 1683L1402 1557C1472 1542 1542 1472 1557 1402ZM901 630C850 790 910 1011 1033 1124L1263 1334C1387 1447 1514 1413 1547 1258L1609 969C1642 815 1582 594 1476 476L1279 257C1173 139 1046 173 995 333ZM1429 753A103 179 -15 1 0 1229 807A103 179 -15 1 0 1429 753ZM711 338A78 134 -135 1 0 821 448A78 134 -135 1 0 711 338ZM338 711A78 134 -135 1 0 448 821A78 134 -135 1 0 338 711Z" fill-rule="evenodd" stroke-width="0"/>
-	</svg></i></a> <span data-lang>Javascript Benchmark // Banc d'essais javascript</span></h2>
+	<h2><a data-lang="el=>el.href=`/#${el.lang}`"><i><svg><use href="/icon.svg#dice"></use></svg></i></a> schem.ist</h2>
 	<data-lang>en fr</data-lang>
 </div>
 <hr>
