--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
 </div>
 <hr>
 <ul>
+	<li><time>2022-02-01</time>
+		<span data-lang>
+			<span lang=en><a href="./zero/index.html#en">root of a function</a></span>
+			<span lang=fr><a href="./zero/index.html#fr">zéro d'une fonction</a></span>
+		</span>
+	</li>
 	<li><time>2022-01-09</time>
 		<span data-lang>
 			<span lang=en><a href="./regexp/index.html#en">word list</a> with regexp filter</span>
