--- a/comminution/index.html
+++ b/comminution/index.html
@@ -24,7 +24,7 @@
 
 <script type=module>
 //import {cast, $, $$} from '../_src/inhtml.js'
-import {cast, $, $$} from '/_npm/@hugov.inhtml.js'
+import {cast, $, $$} from '/_npm/@hugov/inhtml.js'
 //import hashData from '../_src/hash-data.js'
 
 const cnv = $('canvas'),
