--- a/montecode/index.html
+++ b/montecode/index.html
@@ -43,9 +43,9 @@
 	instruction
 	graph legends and options
 */
-import {$, $$} from '/_npm/@hugov.inhtml.js'
+import {$, $$} from '/_npm/@hugov/inhtml.js'
 import hashData from '../_src/hash-data.js'
-import SIM from '/_npm/@hugov.correl-range.js'
+import SIM from '/_npm/@hugov/correl-range.js'
 import editable from '../_src/editable.js'
 import parse from './parse.js'
 import {CodeJar} from 'https://medv.io/codejar/codejar.js'
