--- a/regexp/index.html
+++ b/regexp/index.html
@@ -37,7 +37,7 @@
 
 <script type=module>
 import hashData from '../_src/hash-data.js'
-import {$} from '/_npm/@hugov.inhtml.js' //$ = ids => document.getElementById(ids[0])
+import {$} from '/_npm/@hugov/inhtml.js' //$ = ids => document.getElementById(ids[0])
 
 const regexpEl = $('#regexp'),
 			countEl = $('#count'),
