--- a/publicbench/index.html
+++ b/publicbench/index.html
@@ -87,7 +87,7 @@
 
 <script type=module>
 
-import {cast, frame, $, $$} from '/_npm/@hugov.inhtml.js'
+import {cast, frame, $, $$} from '/_npm/@hugov/inhtml.js'
 import hashData from '../_src/hash-data.js'
 import editable from '../_src/editable.js'
 
