--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
 </div>
 <hr>
 <ul>
+	<li><time>2022-02-20</time>
+		<span data-lang>
+			<span lang=en><a href="./bwt/index.html#en/24HAei+B-XGCKvJUl=M.5uVj3:F-~g5l4u">Burrows–Wheeler transform (BWT)</a></span>
+			<span lang=fr><a href="./bwt/index.html#fr/24HAei+B-XGCKvJUl=M.5uVj3:F-~g5l4u">Transformée de Burrows-Wheeler (BWT)</a></span>
+		</span>
+	</li>
 	<li><time>2022-02-01</time>
 		<span data-lang>
 			<span lang=en><a href="./zero/index.html#en">root of a function</a></span>
