--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 <ul>
 	<li><time>2022-02-20</time>
 		<span data-lang>
-			<span lang=en><a href="./bwt/index.html#en/24HAei+B-XGCKvJUl=M.5uVj3:F-~g5l4u">Burrows–Wheeler transform (BWT)</a></span>
-			<span lang=fr><a href="./bwt/index.html#fr/24HAei+B-XGCKvJUl=M.5uVj3:F-~g5l4u">Transformée de Burrows-Wheeler (BWT)</a></span>
+			<span lang=en><a href="./bwt/index.html#en/A]JQ%@56mS.[CdSe+Nry.:hD;]yUaypvu@yltrD'q/Y$vlz_+_.H_7Q4">Burrows–Wheeler transform (BWT)</a></span>
+			<span lang=fr><a href="./bwt/index.html#fr/A]JQ%@56mS.[CdSe+Nry.:hD;]yUaypvu@yltrD'q/Y$vlz_+_.H_7Q4">Transformée de Burrows-Wheeler (BWT)</a></span>
 		</span>
 	</li>
 	<li><time>2022-02-01</time>
