--- a/montecode/index.html
+++ b/montecode/index.html
@@ -21,10 +21,10 @@
 <details>
 	<summary data-lang>templates and examples // exemples de modèles</summary>
 	<li data-lang>
-		<a lang=en href="./#en/1sqfEBX,BWl1Cs2xNv;j0kyVf~+tT?zJ,RFoq@j6OntNx_:MP/NMIpSj9s~2_F$kN&?i1hp2jjHE:/f)rbhwzJ/f+3wk0tm5Z=hrG">
+		<a lang=en href="./#en/SRBNiFwIe:g*GBd?JRu@+-RTHr#0Y$CVU:x0_J1M)(]T&gaTSSq#yG-z8#S]GLmGitXzExa&V#8lAfNaKBy8l]dHyCeeqhdreFu">
 		variable rate and duration investment
 		</a>
-		<a lang=fr href="./#fr/1sqfEBX,BWl1Cs2xNv;j0kyVf~+tT?zJ,RFoq@j6OntNx_:MP/NMIpSj9s~2_F$kN&?i1hp2jjHE:/f)rbhwzJ/f+3wk0tm5Z=hrG">
+		<a lang=fr href="./#fr/SRBNiFwIe:g*GBd?JRu@+-RTHr#0Y$CVU:x0_J1M)(]T&gaTSSq#yG-z8#S]GLmGitXzExa&V#8lAfNaKBy8l]dHyCeeqhdreFu">
 		investissement à durée et rendement variable
 	</a></li>
 </details>
