--- a/publicbench/index.html
+++ b/publicbench/index.html
@@ -20,24 +20,24 @@
 <details>
 	<summary data-lang>templates and examples // exemples de modèles</summary>
 	<li data-lang>
-		<a lang=en href="./#en/JoY@AB$I:F4c3m9mU-5A2XX5F3hMh;G.$_9=4rgPz3ZWUy$r!O_tyEuK=_dP8?HR0+r,zjcA7KRu:NxoorI&XVGe0VaT_Qk/7tJ5+aaCi0lXW2Oq0NYF&_=:sV3AveFBrrZLnWh!xlA@MWJfqjiGwufB,ptwTfHkl1nWyZbAt)=jL_6_jcWdbjRnM5=y~EpRF6IgVJ4Kwqk.7KJA3oi4q9QY~azkUht~Qx!Z(D/b23;D1E$:0t//9ED&isHKov,7m;vPBD!W6j@baRYk,@dy=DEBSC*lu_b5q@v~xitn4bO!1nTCd*_Do3+emA,!TR$x&v;+VNH*9GkKIEXvtAracz:_jEqYGnh$rS0H:EZ42h3LZk(NbXH33:lZRyWFLSn&4YRshcDU@b$*P-IKpLn,*LL37$=p8DgyJS=">
+		<a lang=en href="./#en/2OF~6oHw][oymas%JtPHoWE6]bUdd5b~@WL8h?Xx!L5;NQ=W4U;Bidx=t_@w;R~@53hjG#6sT[iR-ihw+]o)]@&s_153mX8losk8Dg[H=Yt1sb_I75O'[inw1jk%5JdkSPM[h5=?vIiJ3zStXZAIe0EuL*4X@Fy+Ie?[Okd*Ut.H3An=BXi~arKW]P!yzR/ATugP8O1YcAPBPekL.0HD(Le~JezJX?)HrhKPZELgIupTOd;$ZTzavTDbIfeq;iMu]Y%:f+s,*#~zb,~6cc31kdoqT@$bZk;p0w=BsMiAO&%9;ElNTLAFc9'%ii6.npBK#sq,G$tA=-35SE1cO1dS4p=~T_N27)%~BzvQRxFAHe!~z(nM-)5E0txiGQ0tv#)MGW#rG(35Z9c?S&c)yi8;c]Tr*4@@!">
 		selecting a single element in a tree of 30
 		</a>
-		<a lang=fr href="./#fr/JoY@AB$I:F4c3m9mU-5A2XX5F3hMh;G.$_9=4rgPz3ZWUy$r!O_tyEuK=_dP8?HR0+r,zjcA7KRu:NxoorI&XVGe0VaT_Qk/7tJ5+aaCi0lXW2Oq0NYF&_=:sV3AveFBrrZLnWh!xlA@MWJfqjiGwufB,ptwTfHkl1nWyZbAt)=jL_6_jcWdbjRnM5=y~EpRF6IgVJ4Kwqk.7KJA3oi4q9QY~azkUht~Qx!Z(D/b23;D1E$:0t//9ED&isHKov,7m;vPBD!W6j@baRYk,@dy=DEBSC*lu_b5q@v~xitn4bO!1nTCd*_Do3+emA,!TR$x&v;+VNH*9GkKIEXvtAracz:_jEqYGnh$rS0H:EZ42h3LZk(NbXH33:lZRyWFLSn&4YRshcDU@b$*P-IKpLn,*LL37$=p8DgyJS=">
+		<a lang=fr href="./#fr/2OF~6oHw][oymas%JtPHoWE6]bUdd5b~@WL8h?Xx!L5;NQ=W4U;Bidx=t_@w;R~@53hjG#6sT[iR-ihw+]o)]@&s_153mX8losk8Dg[H=Yt1sb_I75O'[inw1jk%5JdkSPM[h5=?vIiJ3zStXZAIe0EuL*4X@Fy+Ie?[Okd*Ut.H3An=BXi~arKW]P!yzR/ATugP8O1YcAPBPekL.0HD(Le~JezJX?)HrhKPZELgIupTOd;$ZTzavTDbIfeq;iMu]Y%:f+s,*#~zb,~6cc31kdoqT@$bZk;p0w=BsMiAO&%9;ElNTLAFc9'%ii6.npBK#sq,G$tA=-35SE1cO1dS4p=~T_N27)%~BzvQRxFAHe!~z(nM-)5E0txiGQ0tv#)MGW#rG(35Z9c?S&c)yi8;c]Tr*4@@!">
 		selection par attribut d'un élément parmis 30 éléments
 	</a></li>
 	<li data-lang>
-		<a lang=en href="./#en/1QlKNCwu?FO_PdH/AHjaAs.sB69~aJLV*2SxxtV?EtNo2J3GuDsuI(Ek0OW~0&(i!/7wwB1L-uZAg;/YRp6DFNtrSef,,Cgf;cV;BoW.wi,xX(@Sj*!phA5LdCHO6qX~vW;qy6+B?_q2F3,k_K$VTEJ)FQmny@3y:H4mu&N4AGkPm+3V6@JYGZa9_sCiZ&68IBYl6WcC$;X5g~GJ_Z5mgAyeEmf=hoTU9MMLlvzaIpIJKbiABA*vYA/J,!c0~GQ7.DXm0=-zIUk*=b_C)R9-DbB;Tou2?_mf0n(dp~A*aRGlCX7(Oc?M_X3Iz~;fI;+XR;tMg,S5sSczr_UBR67$5:,_5J;zvK7.kgf&wP6FY~8b+K(a=E@1x&j3@y+aBh0S)!D-1-*!*qE,tI9=4X=pveg**BV-T)n(yw67oyqyc4*)5Q!H$20F$jJIr~0">
+		<a lang=en href="./#en/1DbWr*zgNeSS5o+K.%O*g82i_wTB5*+&1VEi,bzhSVxZ;y8I*?QuvDR:c5b$~SZN$@@NV'vgWb0lK6qQY$%kSb,:rNN*5MRQG;a&soU,_sGeLc82*]8L*dW]~BxC@z]h7b#nD#:'l!IX2MzHa48;1'OoUfbx1H6g7zPYyf,i2LN(S'&Ez;N(MuAPkti$)vpg828/16Pksk47u-wOjeU_sVH=n_A7snbYeVU+Pz0J@wvu/E4*XtAm@-D8*+pxD4H'SmJI@1&)Ft@=sMxmTjFtQ.!8w%6QC7nO%7$].Zd+?tQpkKr.VoriUs;R1.L!AqH&uaylgm33,v-DEWXJ-9%~EQoa-pOq?VfwhoaH&p&8c#d1T0M2#(*-&]qzYXMXfm4%_yRCrERNKMth,WhSBfsxUMsr=YW1:0UTe')oZ2lFtD$TS-r&N,KlU">
 		selecting elements in a tree of 30
 		</a>
-		<a lang=fr href="./#fr/1QlKNCwu?FO_PdH/AHjaAs.sB69~aJLV*2SxxtV?EtNo2J3GuDsuI(Ek0OW~0&(i!/7wwB1L-uZAg;/YRp6DFNtrSef,,Cgf;cV;BoW.wi,xX(@Sj*!phA5LdCHO6qX~vW;qy6+B?_q2F3,k_K$VTEJ)FQmny@3y:H4mu&N4AGkPm+3V6@JYGZa9_sCiZ&68IBYl6WcC$;X5g~GJ_Z5mgAyeEmf=hoTU9MMLlvzaIpIJKbiABA*vYA/J,!c0~GQ7.DXm0=-zIUk*=b_C)R9-DbB;Tou2?_mf0n(dp~A*aRGlCX7(Oc?M_X3Iz~;fI;+XR;tMg,S5sSczr_UBR67$5:,_5J;zvK7.kgf&wP6FY~8b+K(a=E@1x&j3@y+aBh0S)!D-1-*!*qE,tI9=4X=pveg**BV-T)n(yw67oyqyc4*)5Q!H$20F$jJIr~0">
+		<a lang=fr href="./#fr/1DbWr*zgNeSS5o+K.%O*g82i_wTB5*+&1VEi,bzhSVxZ;y8I*?QuvDR:c5b$~SZN$@@NV'vgWb0lK6qQY$%kSb,:rNN*5MRQG;a&soU,_sGeLc82*]8L*dW]~BxC@z]h7b#nD#:'l!IX2MzHa48;1'OoUfbx1H6g7zPYyf,i2LN(S'&Ez;N(MuAPkti$)vpg828/16Pksk47u-wOjeU_sVH=n_A7snbYeVU+Pz0J@wvu/E4*XtAm@-D8*+pxD4H'SmJI@1&)Ft@=sMxmTjFtQ.!8w%6QC7nO%7$].Zd+?tQpkKr.VoriUs;R1.L!AqH&uaylgm33,v-DEWXJ-9%~EQoa-pOq?VfwhoaH&p&8c#d1T0M2#(*-&]qzYXMXfm4%_yRCrERNKMth,WhSBfsxUMsr=YW1:0UTe')oZ2lFtD$TS-r&N,KlU">
 		selection par attribut d'un groupe d'éléments parmis 30 éléments
 	</a></li>
 	<li data-lang>
-		<a lang=en href="./#en/z00zL:d&&mR9DWoQfW;ncXp,HSt3gi!FH/o;CE2,pYVg+uf:gzxH0Ra3O5+o;-WAtLv4i;r+DKpjycH(A8ZFR:v7w(O_LpKl&4Xqnk9&j_ckcOxlb(q=mDQfMw7)5jB2TscBI/-;~0m)AkJvEUIV4!qpzoxnx&Ev.k:d&.)g~U,GYOw4JiSr)7e9gp(Qgnq=c7t-gUwK?i9WNuSvK@qxMsxryMmAOcW_N$b4;!(m-b?Pq0t5kM3s7.7~3hdoikYaA+30tSfuHGW0fssP*3H0">
+		<a lang=en href="./#en/2D3e$M[tqlrRa1@:8kbcrL[//e?9Q!1p5xWw=DRtDwe_NL?NdBL(%zxM/3~UVAKtM:$Dk,~KAqev?Iej_akp'tX=F#6zfOBJ[37+U?a2jdiRawUJuPm&%oEpnC'ZrjHNRyb,kb3BitH0%.ww5wvd/5';b/c#%w2-f(G?C&6t??/aG13!Lp7KP#cGX+bu=5;O:3g5&qKkf++ql]Qb#?(*QL:berTeu7@wa@4A72km]Yx.G4$+VzWwx(Pq;.+LWAI/Po7ReP-yukHr8w!Xt">
 		iterating through object keys and values
 		</a>
-		<a lang=fr href="./#fr/z00zL:d&&mR9DWoQfW;ncXp,HSt3gi!FH/o;CE2,pYVg+uf:gzxH0Ra3O5+o;-WAtLv4i;r+DKpjycH(A8ZFR:v7w(O_LpKl&4Xqnk9&j_ckcOxlb(q=mDQfMw7)5jB2TscBI/-;~0m)AkJvEUIV4!qpzoxnx&Ev.k:d&.)g~U,GYOw4JiSr)7e9gp(Qgnq=c7t-gUwK?i9WNuSvK@qxMsxryMmAOcW_N$b4;!(m-b?Pq0t5kM3s7.7~3hdoikYaA+30tSfuHGW0fssP*3H0">
+		<a lang=fr href="./#fr/2D3e$M[tqlrRa1@:8kbcrL[//e?9Q!1p5xWw=DRtDwe_NL?NdBL(%zxM/3~UVAKtM:$Dk,~KAqev?Iej_akp'tX=F#6zfOBJ[37+U?a2jdiRawUJuPm&%oEpnC'ZrjHNRyb,kb3BitH0%.ww5wvd/5';b/c#%w2-f(G?C&6t??/aG13!Lp7KP#cGX+bu=5;O:3g5&qKkf++ql]Qb#?(*QL:berTeu7@wa@4A72km]Yx.G4$+VzWwx(Pq;.+LWAI/Po7ReP-yukHr8w!Xt">
 		iteration sur l'ensemble des clés et valeurs d'un objet
 		</a></li>
 </details>
