no brackets in URL

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 <ul>
 	<li><time>2022-02-20</time>
 		<span data-lang>
-			<span lang=en><a href="./bwt/index.html#en/A]JQ%@56mS.[CdSe+Nry.:hD;]yUaypvu@yltrD'q/Y$vlz_+_.H_7Q4">Burrows–Wheeler transform (BWT)</a></span>
-			<span lang=fr><a href="./bwt/index.html#fr/A]JQ%@56mS.[CdSe+Nry.:hD;]yUaypvu@yltrD'q/Y$vlz_+_.H_7Q4">Transformée de Burrows-Wheeler (BWT)</a></span>
+			<span lang=en><a href="./bwt/index.html#en/exi_hL?ZiKNQ$_GjNm7p@).PdmyIa1Up%T%(+'K_jiUzi!=LTIkOd,C;">Burrows–Wheeler transform (BWT)</a></span>
+			<span lang=fr><a href="./bwt/index.html#fr/exi_hL?ZiKNQ$_GjNm7p@).PdmyIa1Up%T%(+'K_jiUzi!=LTIkOd,C;">Transformée de Burrows-Wheeler (BWT)</a></span>
 		</span>
 	</li>
 	<li><time>2022-02-01</time>
@@ -32,8 +32,8 @@
 	</li>
 	<li><time>2022-01-09</time>
 		<span data-lang>
-			<span lang=en><a href="./regexp/index.html#en">word list</a> with regexp filter</span>
-			<span lang=fr><a href="./regexp/index.html#fr">list de mots</a> avec filtre regexp</span>
+			<span lang=en><a href="./regexp/index.html#en/QdxgRPH.!tiXdzt">word list</a> with regexp filter</span>
+			<span lang=fr><a href="./regexp/index.html#fr/QdxgRPH.!tiXdzt">list de mots</a> avec filtre regexp</span>
 		</span>
 	</li>
 	<li><time>2021-05-16</time>
