--- a/montecode/index.html
+++ b/montecode/index.html
@@ -21,10 +21,10 @@
 <details>
 	<summary data-lang>templates and examples // exemples de modèles</summary>
 	<li data-lang>
-		<a lang=en href="./#en/SRBNiFwIe:g*GBd?JRu@+-RTHr#0Y$CVU:x0_J1M)(]T&gaTSSq#yG-z8#S]GLmGitXzExa&V#8lAfNaKBy8l]dHyCeeqhdreFu">
+		<a lang=en href="./#en/3h5l'.!R.?zcWia*qyG1io-UdE%MG%de9-nX_5NV~a'dqeLc8OXgo?fqdeSzCLrn$0.QQ9v%LcStxlTw9O&xo?hRw5CQR,s3$pP,">
 		variable rate and duration investment
 		</a>
-		<a lang=fr href="./#fr/SRBNiFwIe:g*GBd?JRu@+-RTHr#0Y$CVU:x0_J1M)(]T&gaTSSq#yG-z8#S]GLmGitXzExa&V#8lAfNaKBy8l]dHyCeeqhdreFu">
+		<a lang=fr href="./#fr/3h5l'.!R.?zcWia*qyG1io-UdE%MG%de9-nX_5NV~a'dqeLc8OXgo?fqdeSzCLrn$0.QQ9v%LcStxlTw9O&xo?hRw5CQR,s3$pP,">
 		investissement à durée et rendement variable
 	</a></li>
 </details>
