--- a/publicbench/index.html
+++ b/publicbench/index.html
@@ -20,24 +20,24 @@
 <details>
 	<summary data-lang>templates and examples // exemples de modèles</summary>
 	<li data-lang>
-		<a lang=en href="./#en/2OF~6oHw][oymas%JtPHoWE6]bUdd5b~@WL8h?Xx!L5;NQ=W4U;Bidx=t_@w;R~@53hjG#6sT[iR-ihw+]o)]@&s_153mX8losk8Dg[H=Yt1sb_I75O'[inw1jk%5JdkSPM[h5=?vIiJ3zStXZAIe0EuL*4X@Fy+Ie?[Okd*Ut.H3An=BXi~arKW]P!yzR/ATugP8O1YcAPBPekL.0HD(Le~JezJX?)HrhKPZELgIupTOd;$ZTzavTDbIfeq;iMu]Y%:f+s,*#~zb,~6cc31kdoqT@$bZk;p0w=BsMiAO&%9;ElNTLAFc9'%ii6.npBK#sq,G$tA=-35SE1cO1dS4p=~T_N27)%~BzvQRxFAHe!~z(nM-)5E0txiGQ0tv#)MGW#rG(35Z9c?S&c)yi8;c]Tr*4@@!">
+		<a lang=en href="./#en/63TKZ22w4olMzyRgLlL+op)runAd2FrSfA,D_2EZ5nUkwhnL9=A'Qp?w7=;7%?q#0HRuyur%j/K9tDvF:8qYjVUr-mgCP?BVFo;n/GKGb5Fk,~Nx7$3l$zP2W/Wt~a:v0LnitK&3fpVJ?2*,/9g!dU8zz,d&,jWTyj3*b2;!O&nhykX8?!,A5)l$=RW9nQ*qw3R%jll,w3it'vAy8*gUktLKqbHQxd5z)XqEhpDEC3U$t8DG1Ysj.4#GFskN;O+*F$$iq9FI+S4cWiDC8rg$.#!pm-Bh&(?1k4NfRhZOvRhw1/IR*E$bvK3m#48CQK8%J@oPF**guUbpybFmhSvdNPYUo3WK~+~2$~X_4Q!GC~z@yP~v'o~w~1OkJ9(E=V#6:rs@&WxMhvWX$5l.q(!95UulwP4#?N5">
 		selecting a single element in a tree of 30
 		</a>
-		<a lang=fr href="./#fr/2OF~6oHw][oymas%JtPHoWE6]bUdd5b~@WL8h?Xx!L5;NQ=W4U;Bidx=t_@w;R~@53hjG#6sT[iR-ihw+]o)]@&s_153mX8losk8Dg[H=Yt1sb_I75O'[inw1jk%5JdkSPM[h5=?vIiJ3zStXZAIe0EuL*4X@Fy+Ie?[Okd*Ut.H3An=BXi~arKW]P!yzR/ATugP8O1YcAPBPekL.0HD(Le~JezJX?)HrhKPZELgIupTOd;$ZTzavTDbIfeq;iMu]Y%:f+s,*#~zb,~6cc31kdoqT@$bZk;p0w=BsMiAO&%9;ElNTLAFc9'%ii6.npBK#sq,G$tA=-35SE1cO1dS4p=~T_N27)%~BzvQRxFAHe!~z(nM-)5E0txiGQ0tv#)MGW#rG(35Z9c?S&c)yi8;c]Tr*4@@!">
+		<a lang=fr href="./#fr/63TKZ22w4olMzyRgLlL+op)runAd2FrSfA,D_2EZ5nUkwhnL9=A'Qp?w7=;7%?q#0HRuyur%j/K9tDvF:8qYjVUr-mgCP?BVFo;n/GKGb5Fk,~Nx7$3l$zP2W/Wt~a:v0LnitK&3fpVJ?2*,/9g!dU8zz,d&,jWTyj3*b2;!O&nhykX8?!,A5)l$=RW9nQ*qw3R%jll,w3it'vAy8*gUktLKqbHQxd5z)XqEhpDEC3U$t8DG1Ysj.4#GFskN;O+*F$$iq9FI+S4cWiDC8rg$.#!pm-Bh&(?1k4NfRhZOvRhw1/IR*E$bvK3m#48CQK8%J@oPF**guUbpybFmhSvdNPYUo3WK~+~2$~X_4Q!GC~z@yP~v'o~w~1OkJ9(E=V#6:rs@&WxMhvWX$5l.q(!95UulwP4#?N5">
 		selection par attribut d'un élément parmis 30 éléments
 	</a></li>
 	<li data-lang>
-		<a lang=en href="./#en/1DbWr*zgNeSS5o+K.%O*g82i_wTB5*+&1VEi,bzhSVxZ;y8I*?QuvDR:c5b$~SZN$@@NV'vgWb0lK6qQY$%kSb,:rNN*5MRQG;a&soU,_sGeLc82*]8L*dW]~BxC@z]h7b#nD#:'l!IX2MzHa48;1'OoUfbx1H6g7zPYyf,i2LN(S'&Ez;N(MuAPkti$)vpg828/16Pksk47u-wOjeU_sVH=n_A7snbYeVU+Pz0J@wvu/E4*XtAm@-D8*+pxD4H'SmJI@1&)Ft@=sMxmTjFtQ.!8w%6QC7nO%7$].Zd+?tQpkKr.VoriUs;R1.L!AqH&uaylgm33,v-DEWXJ-9%~EQoa-pOq?VfwhoaH&p&8c#d1T0M2#(*-&]qzYXMXfm4%_yRCrERNKMth,WhSBfsxUMsr=YW1:0UTe')oZ2lFtD$TS-r&N,KlU">
+		<a lang=en href="./#en/5Z5j/)1E(uT-?n3HqCvLlTe%((:(*_W+AF/rm/N7468$Z~feE/14QO~~ZC:DhCa?aPiM'f~3wZ;6O*atE)c.s&&EExma~jz'vv@0BUas.,.e6HW?IKV_qsTr)ubo72@CJ4S;5-Wi(W)@p_rPvmM&ifK_nB=UR;VavP?QHyCrJWDwc7-VW!,rTRF~;rI_D~(TdZOgVGz,S;6iN)N'@QH'tukaz:e)O13S=*$Y,y6G91&m;5A_K4H'xoXOP,,ehkX3F5_iIU1,ZW8I4z_VlIFdHUcLZ$wayFcijd-X*wm*YV4Z4kD5FHZN!2ou*cv(eY7yu-41Hr6W_!'*gG$%2(n=MXEwgp;cl%tZS8B0rRgQ:wfYzCmcpmyA3(.3d_DQh?3$,cMZdi0n44V4%j2+YSy$!QL$!w-XAe@%-5ozNDi.z9=PNcgQ63Myziy">
 		selecting elements in a tree of 30
 		</a>
-		<a lang=fr href="./#fr/1DbWr*zgNeSS5o+K.%O*g82i_wTB5*+&1VEi,bzhSVxZ;y8I*?QuvDR:c5b$~SZN$@@NV'vgWb0lK6qQY$%kSb,:rNN*5MRQG;a&soU,_sGeLc82*]8L*dW]~BxC@z]h7b#nD#:'l!IX2MzHa48;1'OoUfbx1H6g7zPYyf,i2LN(S'&Ez;N(MuAPkti$)vpg828/16Pksk47u-wOjeU_sVH=n_A7snbYeVU+Pz0J@wvu/E4*XtAm@-D8*+pxD4H'SmJI@1&)Ft@=sMxmTjFtQ.!8w%6QC7nO%7$].Zd+?tQpkKr.VoriUs;R1.L!AqH&uaylgm33,v-DEWXJ-9%~EQoa-pOq?VfwhoaH&p&8c#d1T0M2#(*-&]qzYXMXfm4%_yRCrERNKMth,WhSBfsxUMsr=YW1:0UTe')oZ2lFtD$TS-r&N,KlU">
+		<a lang=fr href="./#fr/5Z5j/)1E(uT-?n3HqCvLlTe%((:(*_W+AF/rm/N7468$Z~feE/14QO~~ZC:DhCa?aPiM'f~3wZ;6O*atE)c.s&&EExma~jz'vv@0BUas.,.e6HW?IKV_qsTr)ubo72@CJ4S;5-Wi(W)@p_rPvmM&ifK_nB=UR;VavP?QHyCrJWDwc7-VW!,rTRF~;rI_D~(TdZOgVGz,S;6iN)N'@QH'tukaz:e)O13S=*$Y,y6G91&m;5A_K4H'xoXOP,,ehkX3F5_iIU1,ZW8I4z_VlIFdHUcLZ$wayFcijd-X*wm*YV4Z4kD5FHZN!2ou*cv(eY7yu-41Hr6W_!'*gG$%2(n=MXEwgp;cl%tZS8B0rRgQ:wfYzCmcpmyA3(.3d_DQh?3$,cMZdi0n44V4%j2+YSy$!QL$!w-XAe@%-5ozNDi.z9=PNcgQ63Myziy">
 		selection par attribut d'un groupe d'éléments parmis 30 éléments
 	</a></li>
 	<li data-lang>
-		<a lang=en href="./#en/2D3e$M[tqlrRa1@:8kbcrL[//e?9Q!1p5xWw=DRtDwe_NL?NdBL(%zxM/3~UVAKtM:$Dk,~KAqev?Iej_akp'tX=F#6zfOBJ[37+U?a2jdiRawUJuPm&%oEpnC'ZrjHNRyb,kb3BitH0%.ww5wvd/5';b/c#%w2-f(G?C&6t??/aG13!Lp7KP#cGX+bu=5;O:3g5&qKkf++ql]Qb#?(*QL:berTeu7@wa@4A72km]Yx.G4$+VzWwx(Pq;.+LWAI/Po7ReP-yukHr8w!Xt">
+		<a lang=en href="./#en/G(4*ZnG9-K1I(vOL)mFvr.m'uc,oUQMwYG_,5?~o08)NBRyM(W!H4C/M33=f7,KUpnPqcV*nz,oqxjvY=L-Rbot:DDJ58b4Mvsm:XG3da/3a8SWk0wcHl7Se~f,z',VY_p$PIQo_e&&FE#eL$6t@:6,!AHNTO7s,~Hlb7t;fX*jpt4GTGEvf*=3uyne~1E=bOfT(rVHo1.;9#u;c3je!Cwt4(?MpbTkq.D+=4%FaA,@XgDurJ9xO'ByAp(DBTA/oRJ=Pp70~wfm;Vd0o%&">
 		iterating through object keys and values
 		</a>
-		<a lang=fr href="./#fr/2D3e$M[tqlrRa1@:8kbcrL[//e?9Q!1p5xWw=DRtDwe_NL?NdBL(%zxM/3~UVAKtM:$Dk,~KAqev?Iej_akp'tX=F#6zfOBJ[37+U?a2jdiRawUJuPm&%oEpnC'ZrjHNRyb,kb3BitH0%.ww5wvd/5';b/c#%w2-f(G?C&6t??/aG13!Lp7KP#cGX+bu=5;O:3g5&qKkf++ql]Qb#?(*QL:berTeu7@wa@4A72km]Yx.G4$+VzWwx(Pq;.+LWAI/Po7ReP-yukHr8w!Xt">
+		<a lang=fr href="./#fr/G(4*ZnG9-K1I(vOL)mFvr.m'uc,oUQMwYG_,5?~o08)NBRyM(W!H4C/M33=f7,KUpnPqcV*nz,oqxjvY=L-Rbot:DDJ58b4Mvsm:XG3da/3a8SWk0wcHl7Se~f,z',VY_p$PIQo_e&&FE#eL$6t@:6,!AHNTO7s,~Hlb7t;fX*jpt4GTGEvf*=3uyne~1E=bOfT(rVHo1.;9#u;c3je!Cwt4(?MpbTkq.D+=4%FaA,@XgDurJ9xO'ByAp(DBTA/oRJ=Pp70~wfm;Vd0o%&">
 		iteration sur l'ensemble des clés et valeurs d'un objet
 		</a></li>
 </details>
