--- a/regexp/index.html
+++ b/regexp/index.html
@@ -30,7 +30,7 @@
 </details>
  -->
 <h3 data-lang>regex filter // filtre regex // Regex Filter // filtro regexp</h3>
-<pre><textarea id=regexp rows=1 autofocus>^ex.{6}$</textarea></pre>
+<pre><textarea id=regexp rows=1 autofocus></textarea></pre>
 
 <h3><span data-lang>results // résultats // Ergebnisse // resultados</span> (<span id=count>0</span>)</h3>
 <pre id=result style=column-count:auto;column-width:30ch;></pre>
