--- a/npm/index.html
+++ b/npm/index.html
@@ -12,7 +12,7 @@
 <body>
 
 <div style="display: flex; justify-content: space-between;">
-	<h2><a data-lang="el=>el.href=`/#${el.lang}`"><i><svg><use href="/icon.svg#dice"></use></svg></i></a> schem.ist</h2>
+	<h2><a data-lang="this.href=`/#${this.lang}`"><i><svg><use href="/icon.svg#dice"></use></svg></i></a> schem.ist</h2>
 	<data-lang>en fr</data-lang>
 </div>
 <hr>
@@ -28,8 +28,6 @@ import {$} from '/_npm/@hugov/inhtml.js' //$ = ids => document.getElementById(id
 
 </script>
 <script type="module">
-//const res = await fetch('http://npmsearch.com/query?q=dom&fields=name')
-//console.log(res)
 //https://github.com/npm/registry/tree/master/docs
 ///downloads/point/last-month/@slack/client
 //GET https://api.npmjs.org/downloads/point/{period}[/{package}]
